--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,11 +18,22 @@
             android:orientation="horizontal">
 
             <androidx.appcompat.widget.Toolbar
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="?attr/actionBarSize"
                 android:layout_weight="1"
                 app:title="Makanku"
                 app:titleTextColor="@color/white" />
+
+            <ImageView
+                android:id="@+id/iv_grid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:padding="8dp"
+                android:src="@drawable/ic_grid_view" />
 
             <ImageView
                 android:id="@+id/iv_profile"
@@ -32,21 +43,17 @@
                 android:background="?attr/selectableItemBackground"
                 android:clickable="true"
                 android:focusable="true"
-                android:padding="12dp"
+                android:padding="8dp"
                 android:src="@drawable/ic_person" />
         </LinearLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.core.widget.NestedScrollView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_list_product"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_list_product"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:listitem="@layout/item_product_linear" />
-    </androidx.core.widget.NestedScrollView>
+        android:layout_height="match_parent"
+        android:layoutAnimation="@anim/layout_animation_item_up_to_down"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+        tools:listitem="@layout/item_product_grid" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
