--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.AndroidPemualaDicoding" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.AndroidPemualaDicoding" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primaryGreen</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -12,8 +12,9 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/primaryGreen</item>
         <!-- Customize your theme here. -->
-        <item name="android:textColor">@color/design_default_color_on_primary</item>
-        <item name="android:colorBackground">@color/black</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:windowBackground">@null</item>
         <item name="android:navigationBarColor">@color/black</item>
+
     </style>
 </resources>
