--- a/app/src/main/res/drawable/bg_round_outline.xml
+++ b/app/src/main/res/drawable/bg_round_outline.xml
@@ -4,5 +4,5 @@
         android:width="1dp"
         android:color="@color/primaryGreen" />
     <corners android:radius="8dp" />
-    <solid android:color="@color/black_trans"/>
+    <solid android:color="@color/transparent" />
 </shape>
