--- a/app/src/main/res/layout/item_product_linear.xml
+++ b/app/src/main/res/layout/item_product_linear.xml
@@ -1,72 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="12dp"
+    android:foreground="?attr/selectableItemBackground"
     android:layout_marginVertical="4dp"
-    app:cardCornerRadius="8dp">
+    android:padding="8dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/iv_product"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:shapeAppearanceOverlay="@style/CircleImage5"
+        tools:src="@mipmap/ic_logo_round" />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="45dp"
+        android:background="@drawable/bg_gradient_trans"
+        app:layout_constraintBottom_toBottomOf="@id/iv_product"
+        app:layout_constraintEnd_toEndOf="@id/iv_product"
+        app:layout_constraintStart_toStartOf="@id/iv_product"
+        app:layout_constraintTop_toTopOf="@id/iv_product"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_round_outline"
-        android:padding="8dp">
+        android:layout_marginStart="8dp"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/iv_product"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Telur Orak Arik" />
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/iv_product"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:shapeAppearanceOverlay="@style/CircleImage5"
-            tools:src="@mipmap/ic_logo_round" />
-
-        <TextView
-            android:id="@+id/tv_title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/iv_product"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="Telur Orak Arik" />
-
-        <TextView
-            android:id="@+id/tv_desc"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:ellipsize="end"
-            android:maxLines="2"
-            android:textSize="12sp"
-            android:textStyle="italic"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/iv_product"
-            app:layout_constraintTop_toBottomOf="@id/tv_title"
-            tools:text="deskripsi singkat deskripsi singkat deskripsi singkat deskripsi singkat" />
+    <TextView
+        android:id="@+id/tv_desc"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:ellipsize="end"
+        android:maxLines="2"
+        android:textSize="12sp"
+        android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/iv_product"
+        app:layout_constraintTop_toBottomOf="@id/tv_title"
+        tools:text="deskripsi singkat deskripsi singkat deskripsi singkat deskripsi singkat" />
 
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_list_composition"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="5dp"
-            android:orientation="horizontal"
-            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/iv_product"
-            app:layout_constraintTop_toBottomOf="@id/iv_product"
-            app:spanCount="2"
-            tools:itemCount="5"
-            tools:listitem="@layout/item_composition" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-</androidx.cardview.widget.CardView>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_list_composition"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/tv_desc"
+        app:layout_constraintTop_toBottomOf="@id/tv_desc"
+        app:spanCount="2"
+        tools:itemCount="5"
+        tools:listitem="@layout/item_composition" />
+</androidx.constraintlayout.widget.ConstraintLayout>
