--- a/app/src/main/res/layout/item_product_linear.xml
+++ b/app/src/main/res/layout/item_product_linear.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="12dp"
-    android:foreground="?attr/selectableItemBackground"
     android:layout_marginVertical="4dp"
+    android:foreground="?attr/selectableItemBackground"
     android:padding="8dp">
 
     <com.google.android.material.imageview.ShapeableImageView
@@ -15,10 +15,10 @@
         android:layout_height="90dp"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
+        android:src="@mipmap/ic_logo_round"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:shapeAppearanceOverlay="@style/CircleImage5"
-        tools:src="@mipmap/ic_logo_round" />
+        app:shapeAppearanceOverlay="@style/CircleImage5" />
 
     <View
         android:layout_width="0dp"
