--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,8 +13,7 @@
         <item name="android:statusBarColor" tools:targetApi="l">@color/primaryGreen</item>
         <!-- Customize your theme here. -->
         <item name="android:textColor">@color/white</item>
-        <item name="android:windowBackground">@null</item>
+        <item name="android:windowBackground">@color/black</item>
         <item name="android:navigationBarColor">@color/black</item>
-
     </style>
 </resources>
